10010 libsmbns: macro expands to multiple statements Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Joshua M. Clulow <josh@sysmgr.org>